--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-markdown": "^10.1.0",
     "sharp": "^0.34.5",
     "sqlite3": "^5.1.7"
   },
