--- a/package.json
+++ b/package.json
@@ -9,31 +9,25 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "better-sqlite3": "^12.5.0",
+    "@huggingface/inference": "^4.13.5",
+    "@prisma/client": "^5.22.0",
     "dotenv": "^17.2.3",
-    "next": "^16.0.8",
-    "openai": "^6.10.0",
+    "next": "16.0.10",
+    "prisma": "^5.22.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
-    "sharp": "^0.34.5",
-    "sqlite3": "^5.1.7"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
-    "@types/better-sqlite3": "^7.6.13",
-    "@types/next": "^8.0.7",
-    "@types/node": "^20.19.26",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "@types/sharp": "^0.31.1",
-    "@types/tailwindcss": "^3.0.11",
-    "autoprefixer": "^10.4.22",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.8",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
-    "typescript": "^5.9.3"
+    "eslint-config-next": "16.0.10",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
